fix weird nav spacing on mobile

--- a/base.css
+++ b/base.css
@@ -32,7 +32,7 @@ nav {
 	top: 0;
 	left: 0;
 	z-index: 999;
-	width: min(calc(100vw - 20px*2 - 8px), 1000px);
+	width: min(calc(100vw - 20px*2), 1000px);
 	height: min-content;
 
 	background-color: rgba(255, 255, 255, 0.48);
